--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My project</title>
 </head>
-
 <body>
-  <h1>Titulo da Página</h1>
+  <header></header>
+  <main></main>
+  <footer>Hello world</footer>
 </body>
 
 </html>
