adicionar cor branca

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   <title>My project</title>
 </head>
 <body>
-  <header></header>
-  <main></main>
-  <footer>Hello world</footer>
+  <h1>Mate academy</h1>
+
+  <ul>
+    <li>Vermelho</li>
+    <li>Verde</li>
+    <li>Azul</li>
+    <li>Branco</li>
+  </ul>''
 </body>
 
 </html>
